--- a/기초 강의기초 강의/1강.md
+++ b/기초 강의기초 강의/1강.md
@@ -1,1 +1,32 @@
+# 1. HTML 이란
 
+### HTML은 HyperText Markup Languagef를 의미한다.
+
+*  HyperText : 하이퍼 링크를 통해 어떤 문서에서 다른 문서로 접근할 수 있는 텍스트
+*  Markup : (콘텐츠를) 표시하다.
+*  Language : 언어
+#### => 하이퍼 텍스트와 콘텐츠를 표시해주는 언어!
+
+#### 쉽게 말해, HTML은 웹브라우저를 통해 표시되는 웹페이지의 콘텐츠를 정의하기 위해 사용하는 언어이다.
+
+# 2. 웹페이지의 콘텐츠를 정의한다.
+
+#### HTML은 웹페이지의 콘텐츠를 정의하기 위해 사용하는 언어이다. 개발자는 HTML코드로 웹페이지에 어떤 내용이 표시될지를 정의한 HTML문서를 만든다.
+
+#### 완성된 HTML코드를 웹브라우저에서 로딩하면 웹페이지가 만들어진다. HTML코드가 웹브라우저를 통해 해석되고 표현되는 과정을 렌더링이라 한다.
+
+
+# 3. HTML 문서 만들기
+
+#### HTML문서는 파일의 확장자가 html 또는 htm 이다.
+* 파일을 수정하고 싶다면, 텍스트 편집기로 열기
+* 결과(웹페이지)를 확인하고 싶다면, 웹브라우저로 열기
+##### -> 대표적인 텍스트 편집기 : 기본 메모장, Brackets, VSCoed 등
+##### -> 대표적인 웹브라우저 : 크롬, 파이어폭스, 사파리, 인터넷익스플로어, 엣지 등
+
+# 4. 내용 정리
+* HTML은 웹페이지 콘텐츠를 정의하는 언어(문서 작성 양식)이다.
+* HTML 코드는 HTML 파일에 작성한다. 확장자는 *.html 또는 *.htm 이다.
+* 텍스트 에디터에서 작성한 HTML코드는 웹브라우저를 통해 표시할 수 있다.
+
+[강의출처](https://www.youtube.com/watch?v=dOpFU0apoes&list=PLFeNz2ojQZjtQc7mt8E9fNzIh9or34A61&index=2)
