--- a/HTML 기초 강의/2강.md
+++ b/HTML 기초 강의/2강.md
@@ -10,3 +10,21 @@
 # 2. 개발자 도구의 활용
 
 #### ex) 네이버 사이트를 연 상태에서 개발자 도구를 열면, 네이버 홈페이지의 HTML 코드를 확인할 수 있다.
+
+# 3. 코드 에디터
+
+#### 코드 에디터란?
+* 프로그래머가 프로그램 소스코드를 편집하기 위해 사용하는 소프트웨어이다.
+
+(코드는 결국 텍스트이다. 그러나 이 텍스트를 더 빠르게. 더 편하게 작성하기 위해서는 코드 에디터를 사용하는 것이 좋다.)
+
+* 텍스트 자동 완성 + 하이라이팅 기능이 추가된 메모장이라고 생각하자.
+
+# 4. visual studio code 사용
+
+지이인짜 간단하게 사용해봄.
+
+# 5. 내용정리
+* 대부분의 최신 브라우저에는 개발자 도구가 탑재되어 있다.
+* 개발자 도구는 개발자의 웹 개발 속도 및 편의를 증가시킨다.
+* 개발자는 코드를 더 빠르고 편하게 편잡하기 위해 코드 에디터를 사용한다.
