--- a/HTML 기초 강의/3강.md
+++ b/HTML 기초 강의/3강.md
@@ -1,1 +1,49 @@
+# 1. HTML은 언어이다
+한국어, 영어 등으로 사람들과 소통하기 위해 해당 언어의 문법에 맞는 표현을 사용해야 하듯, HTML 언어를 목적에 맞게 사용하기 위해서는 HTML의 문법에 맞는 표현을 사용해야 한다.
 
+HTML의 문법은 딱 한 가지, 태그(tag)만 기억하면 된다.
+
+#### 태그란?
+* HTML 코드에서 정보(콘텐츠)를 정의하는 형식
+
+# 2. HTML 태그 사용법 : 시작과 끝
+태그는 <> 과 </> 기호를 사용해 콘탠츠의 시작과 끝을 표시한다.
+각 태그는 콘텐츠를 감싸며, 태그명은 콘텐츠의 성격과 의미를 나타낸다.
+
+#### 태그 시용 형태)
+
+`<태그명>여기에 콘텐츠를 기입합니다</태그명>`
+
+# 3. HTML 태그 사용법 : 단일 태그
+앞서 보았듯 태그는 <> 과 </> 기호를 사용해 콘텐츠의 시작과 끝을 표시한다.
+그러나 경우에 따라 시작과 끝을 구분할 필요가 없는 태그도 존재한다.
+이를 단일 태그라 하며, 단일 태그의 형식은 당므 예와 같다.
+
+#### 단일 태그 사용 형태)
+
+`<태그명/> 또는 <태그명>`
+
+* 단일 태그는 콘텐츠를 감쌀 필요가 없으므로 시작과 끝을 구분하지 않는다.
+
+# HTML 태그 사용법 : 속성
+속성은 태그의 부가적인 기능을 정의하는 것으로, 선택사항이다.
+속성은 시작 태그의 내부에 정의한다. 속성의 개수에는 특별한 제한이 없다.
+
+#### 속성이 추가된 태그의 예)
+
+`<태그명 속성명="속성값">내용이 들어감</태그명>`
+
+`<태그명 속성명="속성값"/>`
+
+* 태그명과 속성 정의는 공백(space)으로 구분하며, 큰따옴표를 사용한다.
+
+# HTML 태그 사용법 : 주석
+주석은 사람에게는 보이지만, 컴퓨터(웹브라우저)에게는 보이지 않는 코드이다.
+주로 코드에 대한 메모를 남기기 위한 용도로 사용된다.
+주로 작성 방법은 아래의 예를 참고하면 된다(총 7개의 기호가 사용된다).
+
+#### HTML 주석의 예)
+
+`<!-- 이 사이에 작성한 내용은 주석으로 처리된다. -->`
+
+* 형식이 다르긴 하지만, 주석 또한 기호를 통해 시작과 끝을 구분한다.
